--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 body{
   color: blue;
 }
+.gradient-text {
+  background-image: linear-gradient(to bottom, red, yellow);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
