--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 body{
-  background-image: linear-gradient(to bottom, red, yellow);
-  color: blue;
+  background-image: linear-gradient(to bottom, #4fff00, #c3ffa7);
+  color: white;
 }
