--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 body{
-  background-image: linear-gradient(to bottom, green, white);
+  background-image: linear-gradient(to bottom right, green, white);
   color: white;
 }
