--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 body{
-  background-image: linear-gradient(135deg, green, white);
+  background-image: linear-gradient(135deg, green, lime);
   color: white;
 }
