--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 body{
-  background-image: linear-gradient(135deg, green, lime);
   color: white;
+}
+#grad{
+  background-image: linear-gradient(to bottom right, green, white);
 }
