--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'MyCustomFont';
-  src: url('freedom-10em-webfont.woff2') format('woff2'),
-       url('freedom-10em-webfont.woff') format('woff');
+  src: url('futureworldsitalic-qzzz6-webfont.woff2') format('woff2'),
+       url('futureworldsitalic-qzzz6-webfont.woff') format('woff');
 }
 
 div.header {
